--- a/Jack.Serilog.Async/Jack.Serilog.Async.csproj
+++ b/Jack.Serilog.Async/Jack.Serilog.Async.csproj
@@ -4,7 +4,18 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Jack</Authors>
-    <Description>把Serilog改为异步模式</Description>
+    <Description>把Serilog改为异步模式
+
+asp.net :
+ Host.CreateDefaultBuilder(args)
+             .UseSerilogAsyncLogger()
+                .ConfigureWebHostDefaults(webBuilder =&gt;
+                {
+                    webBuilder.UseStartup&lt;Startup&gt;();
+                });
+
+.net：
+services.UseSerilogAsyncLogger();</Description>
     <Version>1.0.0.1</Version>
   </PropertyGroup>
 
