--- a/Jack.Serilog.Async/Jack.Serilog.Async.csproj
+++ b/Jack.Serilog.Async/Jack.Serilog.Async.csproj
@@ -28,6 +28,8 @@ services.UseSerilogAsyncLogger();</Description>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.WebSockets" Version="2.2.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.0" />
     <PackageReference Include="Serilog" Version="2.8.0" />
   </ItemGroup>
